--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
         <li><a href="#about">BLOG</a></li>
 		  <li> <a href="#contact">TOURNAMENT</a></li>
 		  <li> <a href="#contact">COACHING</a></li>
-		  <li> <a href="#contact">HEALTH/WELLNESS</a></li>
+		  <li> <a href="#contact">HEALTH/WELLNESS</a>
 	    <li> <a href="#contact">ABOUT ME</a></li>
+		  </li>
       </ul>
     </nav>
   </header>
@@ -45,28 +46,22 @@
   <!-- Stats Gallery Section -->
   <div class="gallery"></div>
   <!-- Parallax Section -->
-  <section class="banner">
-    <h2 class="parallax">PARALLAX HERO</h2>
-    <p class="parallax_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
-  </section>
   <!-- More Info Section -->
   <footer>
     <article class="footer_column">
-      <h3>Picture</h3>
-      <img src="C:\Users\247583\Downloads\download (1)mario.jfif" alt="" width="200" height="100" class="cards"/>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla </p>
+      <img src="C:\Users\247583\Documents\GitHub\Esports\images\Blackavatar.png" alt="" width="200" height="100" class="cards"/>
+		<h1>Hello!</h1>
+      <p>Hi, my name is Marcel Hicks, I am 16 years old and I love to play games everyday. My favorite characters are Mario and Sonic the Hedgehog and much more. I am currently playing Sonic frontier    &nbsp; </p>
     </article>
     <article class="footer_column">
-      <h3>Pictures</h3>
-      <img src="C:\Users\247583\Downloads\download (1)sonic.jfif" alt="" width="400" height="200" class="cards"/>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla </p>
+      <img src="C:\Users\247583\Documents\GitHub\Esports\images\Wii.jfif" alt="" width="400" height="200" class="cards"/>
+		<h1>Favorite console</h1>
+      <p>My favorite console is the Wii because there were so many good games on there like Mario Kart Wii or New Super Mario Bros Wii.&nbsp;The Wii influenced my gaming history because it the console that started it all of my desire to play video games.  </p>
     </article>
   </footer>
   <!-- Footer Section -->
   <section class="footer_banner" id="contact">
     <h2 class="hidden">Footer Banner Section </h2>
-    <p class="hero_header">ABOUT ME</p>
-    <div class="button"></div>
   </section>
   <!-- Copyrights Section -->
   <div class="copyright">&copy;2023- <strong>Theme&nbsp;</strong></div>
