--- a/Blog.HTML
+++ b/Blog.HTML
@@ -44,6 +44,10 @@ Question: What game did you  play most recently?
 <br>
 Response: I mostly played a lot of Overwatch 2 and decently played Splatoon 3 and Valorant recently.  There were other games like Dead by Daylight, Fortnite, and Apex that I played for a little</p>
         <h2>Marcel Hicks</h2>
+<br>
+<p> Blog: 10/24/2023 </p>
+<br>
+<p>
       </aside>
     </section>
     <section id="sidebar"> 
