--- a/Blog.HTML
+++ b/Blog.HTML
@@ -47,7 +47,11 @@ Response: I mostly played a lot of Overwatch 2 and decently played Splatoon 3 an
 <br>
 <p> Blog: 10/24/2023 </p>
 <br>
-<p>
+<p>Sunset by Marcel H. is marked with CC0 1.0 </p>
+<p><bold> What is copyright and what is a creative common?</bold></p>
+<p>Copyright refers to the legal right of the owner of intellectual property. This means that that person owns the right of something. It also means that you would need to ask permission if you were to use their work. A creative Commons licenses provide an easy way to manage the copyright terms that attach automatically to all creative material under copyright. this gives copyright to people.</p>
+<br>
+<img src="/C:\Users\247583\Downloads/Boat on water.jpg" alt="Boat on water with sunset" style="width:128px;height:128px;">
       </aside>
     </section>
     <section id="sidebar"> 
